--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An application for taking notes.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,6 @@
   "bugs": {
     "url": "https://github.com/JeffTab/NoteTaker/issues"
   },
-  "homepage": "https://github.com/JeffTab/NoteTaker#readme"
+  "homepage": "https://github.com/JeffTab/NoteTaker#readme",
+  "keywords": []
 }
